--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "𝗭𝗘𝗨𝗦 𝗨𝗦𝗘𝗥𝗕𝗢𝗧",
+    "name": "𝗔𝗶𝗺𝗫 𝗨𝗦𝗘𝗥𝗕𝗢𝗧",
     "logo": "https://telegra.ph/file/0b520f40be4bbca3835e2.jpg",
     "description": "An first Telegram Userbot with multi Clients for Spamming or Mass.",
     "keywords": ["pyrogram", "userbot"],
